# virtual-bus

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  file-structure.md  motivation.md  scope.md
scripts/: model_offline.py  replay_demo.py  run_demo.py
src/virtual_bus/: __init__.py  cli.py
src/virtual_bus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/virtual_bus/analyzer/: __init__.py  analyzer.py  events.py
src/virtual_bus/bus/: analyzer.py  bus.py  generator.py  inprocess.py  jsonl.py  model_v1.py  normalizer.py  observer.py  replayer.py  types.py
src/virtual_bus/core/: __init__.py  bus.py  frame.py  node.py
src/virtual_bus/faults/: __init__.py  injector.py
src/virtual_bus/normalizer/: __init__.py  normalizer.py  schema.py
src/virtual_bus/observer/: __init__.py  observer.py
src/virtual_bus/recorder/: __init__.py  player.py  recorder.py
src/virtual_bus/visualization/: __init__.py  console.py  live.py
tests/: __init__.py  test_analyzer.py  test_bus.py  test_demo_modes.py  test_e2e_pipeline.py  test_frame.py  test_node.py  test_normalizer.py  test_observer.py  test_replayer.py
